# loosely_wrapped_dna

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: basic-dna.dawg
include/: aliases.xmh  dawg_app.h  dawgarg.xmh  dawgma.xmh  global.h  global.xmh  include_me.hpp  indel.h  ma.h  matic.h  output.h  rate.h  residue.h  root.h  subst.h  trick.h  trick_parse.h  version.h  wood.h  wood_parse.h
src/: dawg.cpp  ma.cpp  main.rs  matic.cpp  models.cpp  output.cpp  parse.cpp  random.cpp
